Version 0.91-dev
    various bug fixes
    input1d now accepts int1 and uint1 types as image index
    input2d now accepts int2 and uint2 types as image index

Version 0.90
    support for offset in sample load
    new matrix multiplication example
    uav support
    new example - uav write
    cast_bits ( and as_typeN opencl like functions )
    changes to double swizzle handling
    fixes in lds handling
    emmit_comment function for adding comments to generated IL
    type traits
    nbody example using double variables for computations
    frexp
    more accurate log(double)
    changes to relational operators for double types ( return type matches input vectors length )
    changes to select ( handling of double types )
    new reciprocal and native_reciprocal functions ( calculating 1/x )
    sqrt and native_sqrt functions
    native_exp and native_log functions
    native_rsqrt and improved precision for rsqrt(double)
    mixed IL and C types operators (+,-,...)
    refactoring of math library ( to improve compilation times only required files can be included )
    changes in files layout ( cal/il/cal_il.hpp moved to cal/cal_il.hpp, cal/il/cal_il_math.hpp moved to cal/cal_il_math.hpp )
    improved mul, div, mod operators with C types ( automatic use of shl, shr, ldexp for power of 2 values ) - to enable compile with defined __CAL_USE_IMPROVED_MULDIV - use with caution ( double ldexp may triger CAL driver bug causing invalid results )
    regression directory with not working kernels ( due to bugs in ATI SDK )
    integer division
    device target name
    uav atomic functions
    lds atomic functions
    uavatomics example

Version 0.87.1
    compilation fix for SDK 2.3

Version 0.87
    IL kernel link bug fix
    support for pinned memory
    new example - optimal n-body brute-force algorithm implementation
    various bug fixes

Version 0.86.3
    rotate bug fix