@@ -31,7 +31,6 @@
 #include <boost/date_time/posix_time/posix_time.hpp>
 #include <cal/cal.hpp>
 #include <cal/cal_il.hpp>
-#include <cal/il/math/cal_il_floor.hpp>
 
 using namespace boost;
 using namespace cal;
@@ -47,7 +46,7 @@ void kernel_matrixmul( input2d<float4>& A, input2d<float4>& B, global<float4>& C
     float4  R[BY][BX4],ta[BY],tb[4][BX4],p;
     int     i,j;
 
-    p.xy() = floor(named_variable<float2>("vWinCoord0.xy"))*float2(BX4,BY);
+    p.xy() = ps::get_global_id<float2>()*float2(BX4,BY);
     p.zw() = float2(-1,-4);
 
     for(i=0;i<BY;i++) {
@@ -115,7 +114,6 @@ std::string create_kernel_matrixmul()
 
     code << "il_ps_2_0\n";
     code << "dcl_cb cb0[1]\n";
-    code << "dcl_input_position_interp(linear_noperspective) vWinCoord0.xy__\n";
 
     Source::begin();
 
